--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Header -->
     <header class="bg-white shadow-sm sticky top-0 z-50">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <a href="#" class="text-2xl font-bold text-gray-900">Michie Auto</a>
+            <a href="https://form.jotform.com/251615738814159" class="text-2xl font-bold text-gray-900">Michie Auto</a>
             <a href="#booking" class="cta-button bg-blue-600 hover:bg-blue-700 text-white font-semibold rounded-lg py-2 px-5">
                 Book Now
             </a>
