--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Michie Auto - Mobile Detailing OKC</title>
+    <title>Michie Auto Detailing - Mobile Detailing OKC</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,8 +27,9 @@
     <!-- Header -->
     <header class="bg-white shadow-sm sticky top-0 z-50">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <a href="https://form.jotform.com/251615738814159" class="text-2xl font-bold text-gray-900">Michie Auto</a>
-            <a href="#booking" class="cta-button bg-blue-600 hover:bg-blue-700 text-white font-semibold rounded-lg py-2 px-5">
+            <!-- Updated Business Name -->
+            <a href="#" class="text-2xl font-bold text-gray-900">Michie Auto Detailing</a>
+            <a href="https://form.jotform.com/251615738814159" target="_blank" class="cta-button bg-blue-600 hover:bg-blue-700 text-white font-semibold rounded-lg py-2 px-5">
                 Book Now
             </a>
         </nav>
@@ -43,9 +44,9 @@
             <div class="w-full">
                 <img 
                     src="https://michieauto.com/20250611_141506.jpg" 
-                    alt="Pristine car interior after a full detail by Michie Auto"
+                    alt="Pristine car interior after a full detail by Michie Auto Detailing"
                     class="rounded-2xl shadow-2xl w-full h-auto object-cover"
-                    onerror="this.onerror=null;this.src='https://placehold.co/600x400/334155/e2e8f0?text=Michie+Auto';">
+                    onerror="this.onerror=null;this.src='https://placehold.co/600x400/334155/e2e8f0?text=Michie+Auto+Detailing';">
             </div>
 
             <!-- Text & CTA Column -->
@@ -76,7 +77,6 @@
         <section id="services" class="my-20 md:my-28">
             <h2 class="text-3xl font-bold text-center mb-12">What's Included in Your $99 Detail</h2>
             <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8">
-                <!-- Cards remain the same -->
                  <div class="bg-white p-8 rounded-xl shadow-lg text-center">
                     <div class="text-blue-600 mb-4"><svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 mx-auto" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M5 3v4M3 5h4M7 13h10M12 3v10M8 21h8M10 21V11h4v10M5.707 16.293L4.293 17.707M18.293 16.293L19.707 17.707" /><path d="M3 13h18v4a2 2 0 01-2 2H5a2 2 0 01-2-2v-4z" /></svg></div>
                     <h3 class="text-xl font-bold mb-2">Full Interior Vacuum</h3><p class="text-gray-600">We meticulously vacuum every corner, including seats, carpets, and trunk.</p>
@@ -101,7 +101,8 @@
     <!-- Footer -->
     <footer class="bg-gray-800 text-white py-8">
         <div class="container mx-auto px-6 text-center">
-            <p class="font-bold text-lg">Michie Auto</p>
+            <!-- Updated Business Name -->
+            <p class="font-bold text-lg">Michie Auto Detailing</p>
             <p class="text-gray-400">Mobile Auto Detailing in OKC</p>
              <a href="tel:+1-405-295-5189" class="text-amber-400 hover:text-amber-300 mt-2 inline-block">(405) 295-5189</a>
             <p class="text-sm text-gray-500 mt-6">&copy; <span id="year"></span> MichieAuto.com - All Rights Reserved.</p>
