--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
     <!-- Header -->
     <header class="bg-white shadow-sm sticky top-0 z-50">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <!-- Updated Business Name -->
             <a href="#" class="text-2xl font-bold text-gray-900">Michie Auto Detailing</a>
             <a href="https://form.jotform.com/251615738814159" target="_blank" class="cta-button bg-blue-600 hover:bg-blue-700 text-white font-semibold rounded-lg py-2 px-5">
                 Book Now
@@ -76,7 +75,8 @@
         <!-- What's Included Section -->
         <section id="services" class="my-20 md:my-28">
             <h2 class="text-3xl font-bold text-center mb-12">What's Included in Your $99 Detail</h2>
-            <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8">
+            <!-- Updated grid layout for 6 items -->
+            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
                  <div class="bg-white p-8 rounded-xl shadow-lg text-center">
                     <div class="text-blue-600 mb-4"><svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 mx-auto" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M5 3v4M3 5h4M7 13h10M12 3v10M8 21h8M10 21V11h4v10M5.707 16.293L4.293 17.707M18.293 16.293L19.707 17.707" /><path d="M3 13h18v4a2 2 0 01-2 2H5a2 2 0 01-2-2v-4z" /></svg></div>
                     <h3 class="text-xl font-bold mb-2">Full Interior Vacuum</h3><p class="text-gray-600">We meticulously vacuum every corner, including seats, carpets, and trunk.</p>
@@ -93,6 +93,31 @@
                      <div class="text-blue-600 mb-4"><svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 mx-auto" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z" /><path d="M12 12a4 4 0 100-8 4 4 0 000 8z" /><path d="M12 12h.01" /></svg></div>
                     <h3 class="text-xl font-bold mb-2">Wheels & Tire Shine</h3><p class="text-gray-600">We clean the wheels and apply tire shine for that finishing touch.</p>
                 </div>
+                <!-- New Service: Interior Shampoo -->
+                <div class="bg-white p-8 rounded-xl shadow-lg text-center">
+                    <div class="text-blue-600 mb-4">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 mx-auto" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M5 19V6a2 2 0 012-2h10a2 2 0 012 2v13a2 2 0 01-2 2H7a2 2 0 01-2-2z" />
+                            <path d="M9 16h6M8 9h8M9 12h6" />
+                        </svg>
+                    </div>
+                    <h3 class="text-xl font-bold mb-2">Interior Shampoo</h3>
+                    <p class="text-gray-600">Deep cleaning for carpets and upholstery to remove stains and odors.</p>
+                </div>
+                <!-- New Service: Dashboard & Panels -->
+                <div class="bg-white p-8 rounded-xl shadow-lg text-center">
+                    <div class="text-blue-600 mb-4">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 mx-auto" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M15.5 2.5a2.5 2.5 0 11-5 0 2.5 2.5 0 015 0z" />
+                            <path d="M4.5 9.5H18a1 1 0 011 1v7a1 1 0 01-1 1H6a1 1 0 01-1-1v-4.5" />
+                            <path d="M10 14v-2" />
+                            <path d="M14 14v-2" />
+                            <path d="M5 10V8a1 1 0 011-1h12a1 1 0 011 1v2" />
+                        </svg>
+                    </div>
+                    <h3 class="text-xl font-bold mb-2">Dashboard & Panels</h3>
+                    <p class="text-gray-600">Wipe down and protect all hard interior surfaces, including dash and doors.</p>
+                </div>
             </div>
         </section>
 
@@ -101,7 +126,6 @@
     <!-- Footer -->
     <footer class="bg-gray-800 text-white py-8">
         <div class="container mx-auto px-6 text-center">
-            <!-- Updated Business Name -->
             <p class="font-bold text-lg">Michie Auto Detailing</p>
             <p class="text-gray-400">Mobile Auto Detailing in OKC</p>
              <a href="tel:+1-405-295-5189" class="text-amber-400 hover:text-amber-300 mt-2 inline-block">(405) 295-5189</a>
