--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             line-height: 1.6;
         }
         .hero-section {
-            /* Placeholder background image - REPLACE WITH YOUR OWN HIGH-QUALITY IMAGE */
-            background-image: url('https://placehold.co/1920x1080/1a1a1a/ffffff?text=Premium+Auto+Detailing');
+            /* Updated background image */
+            background-image: url('https://michieauto.com/c6106051-ecc6-4964-9246-4c79215cdb5d~1.jpg');
             background-size: cover;
             background-position: center;
             position: relative;
